feat(firehose): add query params for filtering firehose logs
